...
			self.navigationController?.pushViewController(allDoneVC, animated: true)
		}, onErrorHandling: { error in
			// display error
			switch error {
			case .dontMatch:
				self.createPassView?.passDotsView.showErrorState()
				self.createPassView?.showErrorWith(text: "Incorrect, try again!")
			case .saveFailed:
				fatalError("Print Failed")
			case .unknown:
				fatalError("Uknown Error")
			}
		}, selectedPasscode: selectedPasscode)
...
