...
	private let sortedPhraseBoxView = UIView()
	private let sortedPhraseCollectionView = SecretPhraseCollectionView()
	private let errorStackView = UIStackView()
	private let errorLabel = UILabel()
	private let errorIcon = UIImageView()
	private let randomPhraseCollectionView = SecretPhraseCollectionView()
	private let continueButton = PinoButton(style: .deactive, title: "Continue")
	private var createWallet: ([String]) -> Void
	private var userSecretPhrase: [String]
	private var randomPhrase: [String]

	// MARK: Initializers

...
		randomPhraseCollectionView.cellStyle = .unordered
		sortedPhraseCollectionView.secretWords = []

		pageTitle.text = "Verify seed phrase"
		pageDescription.text = "A two line description should be here. A two line description should be here"

		errorLabel.text = "Invalid order! Try again"
		errorLabel.textColor = .Pino.errorRed
		errorLabel.font = .PinoStyle.mediumCallout
		errorLabel.textAlignment = .center
		errorStackView.isHidden = true

		errorIcon.image = UIImage(systemName: "exclamationmark.circle.fill")
...
