...
	public let pageTitle = "Import wallet"
	public var signDescriptionText =
		"By tapping on import, you sign an off-chain message that activates this account in Pino."
	public var signDescriptionBoldText = "import"
	public var textViewDescription = "Typically 64 alphanumeric characters"
	public var textViewPlaceholder = "Private Key"
	public let pasteButtonTitle = "Paste"
	public let continueButtonTitle = "Import"
	public let newAvatarButtonTitle = "Set new avatar"
	public let accountNamePlaceHolder = "Enter name"
	public var accounts: [AccountInfoViewModel]

	@Published
	public var accountAvatar: Avatar!
...
