...
		}), for: .touchUpInside)
	}

	private func setupStyle() {
		backgroundColor = .Pino.secondaryBackground

		importWalletButton.setTitle("I already have a wallet", for: .normal)
		importWalletButton.setTitleColor(.Pino.primary, for: .normal)
		importWalletButton.titleLabel?.font = .PinoStyle.semiboldBody

		signinStackView.axis = .vertical
		signinStackView.spacing = 36
		signinStackView.alignment = .fill
...
