...
	private let seedPhraseView = UIView()
	private let revealLabel = PinoLabel(style: .title, text: nil)
	private let seedPhraseBlurView = BlurEffectView()
	private let seedPhraseStackView = UIStackView()
	private let seedPhraseCollectionView = SecretPhraseCollectionView()
	private let shareButton = UIButton()
	private let continueButton = PinoButton(style: .deactive, title: "I Saved")
	private var shareSecretPhrase: () -> Void
	private var savedSecretPhrase: () -> Void

	// MARK: Initializers

	init(_ secretPhrase: [String], shareSecretPhare: @escaping (() -> Void), savedSecretPhrase: @escaping (() -> Void)) {
...

	private func setupStyle() {
		backgroundColor = .Pino.secondaryBackground

		titleLabel.text = "Backup seed phrase"

		revealLabel.text = "Tap to reveal"
		firstDescriptionLabel.text = "Write down your Secret Phrase and store it in a safe place."
		firstDescriptionLabel.textColor = .Pino.label
		secondDescriptionLabel.text = "It allows you to recover your wallet if you lose your device or password"
		secondDescriptionLabel.textColor = .Pino.label

		firstDescriptionBox.backgroundColor = .Pino.background
...
