...
	@Published
	public var securityMode = false
	@Published
	public var manageAssetsList: [AssetViewModel]! = []
	public var selectedAssets = [SelectedAsset]()

	public let copyToastMessage = "Copied!"
	public let connectionErrorToastMessage = "No internet connection"
	public let requestFailedErrorToastMessage = "Couldn't refresh home data"
	public let sendButtonTitle = "Send"
	public let receiveButtonTitle = "Receive"
	public let sendButtonImage = "arrow_up"
	public let receiveButtonImage = "arrow_down"

...
