...
	public var positionAssetDetailsList: [PositionAssetModel]?

	public let sendButtonTitle = "Send"
	public let receiveButtonTitle = "Receive"
	public let sendButtonImage = "arrow_up"
	public let receiveButtonImage = "arrow_down"
	public let showBalanceButtonTitle = "Show balance"
	public let showBalanceButtonImage = "eye"

	// MARK: Private Properties

	private var cancellables = Set<AnyCancellable>()

...
